# Matam-Assignment2

./: CMakeLists.txt  Course.c  Course.h  CourseSystem.c  CourseSystem.h  DynamicArray.c  DynamicArray.h  main.c  palindrom.c  test1.c  test2.c  test2_out.txt
